Fixed navbar alignment

--- a/public/assets-v2/css/responsive.css
+++ b/public/assets-v2/css/responsive.css
@@ -2028,7 +2028,7 @@
     line-height: 45px;
   }
   .main-nav .container-fluid {
-    padding-left: 15px;
+    padding-left: 45px;
     padding-right: 15px;
   }
   .side-nav .login-left {
